Fix location mobile and website

--- a/mobile.css
+++ b/mobile.css
@@ -86,6 +86,11 @@ body {
 /* ******************************************** */
 /* LOCATION section*/
 
+.location .right {
+    font-size: 230%;
+}
+
+.location .
 /* End of LOCATION section*/
 /* ******************************************** */
 
