--- a/style.css
+++ b/style.css
@@ -809,7 +809,7 @@ body{
     width: 100%;
     border: 0;
     margin: 0 auto;
-    height: 522px;
+    /*height: 522px;*/
 }
 
 /* Location container */
@@ -823,14 +823,13 @@ body{
 /* Location title */
 .location .location-title {
     /* position: absolute; */
-    height: 119.32px;
+   /* height: 119.32px;*/
     /* top: 13px; */
-    margin-top: 50px;
-    margin-bottom: 30px;
+    margin: auto;
 
     font-style: normal;
     font-weight: 600;
-    font-size: 5vw;
+    font-size: 70px;
     line-height: 109px;
     letter-spacing: 1.1px;
     text-align: center;
@@ -839,19 +838,17 @@ body{
     width:100%;
     display: flex;
     justify-content: center;
-
-
 }
 
 .date-text{
     padding: 5px;
     /* border:solid black; */
     max-width: 600px;
-    height: 350px;
+/*    height: 350px;*/
 }
 
 /* Date placement */
-.location #date {
+.location .date-text {
     /* position: absolute; */
     /* width: 465px;
     height: 170.71px; */
@@ -860,11 +857,12 @@ body{
     font-style: normal;
     /* padding-left: 100px; */
     color: #000000;
-   
+    width: 80%;
+    margin: auto;
     /* margin-right: 50px;
     margin-left: 5%; */
-    margin: 0 auto;
-    border-bottom: solid black;
+
+/*    border-bottom: solid black;*/
   
 }
 
@@ -872,13 +870,15 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    border-bottom: solid black;
 }
 
 
 
-svg{
+/*svg{
     margin-left: 4%;
-}
+}*/
+
 /* Ellehacks event name */
 .location #ellehacks {
     display: block;
@@ -889,23 +889,18 @@ svg{
     line-height: 1.8;
     letter-spacing: 1.1px;
     margin:0 auto;
-    text-align: center;
-}
-
-/* Event dates */
-.location #dates {
-    font-weight: 400;
-    /* font-size: 2.7vw; */
-    font-size: 30px;
-    line-height: 1.2;
-    letter-spacing: 1.2px;
-    margin: 0 auto;
-    
+/*    text-align: center;*/
 }
 
 .location .right{
-    margin-right: 50px;
-    padding-top: 30px;
+    /*margin-right: 50px;*/
+    font-weight: 400;
+
+    font-size: 150%;
+    line-height: 1.2;
+    letter-spacing: 1.2px;
+    padding-top: 5%;
+    margin: auto;
 }
 
 /* Logo icon at date info */
@@ -917,35 +912,30 @@ svg{
     top: 67.48px; */
     margin: 0 auto;
 }
-.location .left{
-    margin-left: 60px;
-}
-
-.location .left{
-    margin-left: 60px;
-}
+/*.location .left{
+    margin-left: 5%;
+}*/
 
 /* Line separator */
-.location line {
+/*.location line {
     stroke: rgb(0,0,0);
     stroke-width: 7;
-}
+}*/
 
 /* Location placement */
 .location #location-info {
-    position: absolute;
-    width: 612.51px;
-    height: 146.76px;
-    top: 338px;
+    position: relative;
+/*    width: 612.51px;*/
+    /*height: 146.76px;*/
+/*    top: 338px;*/
     left: -29px;
     /* margin-left: 5%; */
-    margin-left: 30px;
+    margin-left: auto;
     font-style: normal;
-    text-align: center;
     color: #000000;
 }
 
-/* Building location */
+/* Building location text*/
 .location #building {
     display: block;
     margin-inline-start: 0px;
@@ -956,11 +946,11 @@ svg{
     font-size: 30px;
     line-height: 42px;
     letter-spacing: 1.1px;
-    text-align: center;
-    margin: 0 auto;
+/*    text-align: center;*/
+    margin: 2% auto;
 }
 
-/* Building address */
+/* Building address text*/
 .location #address {
     width: 437.67px;
     height: 61.54px;
@@ -969,7 +959,7 @@ svg{
     font-size: 30px;
     line-height: 31px;
     letter-spacing: 1.2px;
-    text-align: center;
+ /*   text-align: center;*/
     margin-left: 10%;
     color: #000000;
     margin: 0 auto;
@@ -977,19 +967,9 @@ svg{
 
 /* Victor phillip db image */
 .location #db {
-    /* position: absolute; */
-    /* width: 365px;
-    height: 326px; */
-    /* width: 10px;
-    height: 20px; */
-    max-width: 300px;
-
-    /* left:40%;
-    top: 158px; */
+    max-width: 70%;
     border: 6px solid #000000;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    /* margin-right: 3%;
-    margin-left: 2%; */
 }
 
 /* Google map image */
@@ -1003,16 +983,21 @@ svg{
     width: 10px; */
     /* right: 1%;
     top: 163px; */
-    max-width: 300px;
-    height: 267px;
-    float: left ;
+    max-width: 70%;
+    height: 90%;
+/*    float: left ;*/
     border: 5px solid #000000;
 }
+
+.location .col-sm {
+    padding: 1%;
+}
+
 .location a {
     text-decoration: none;
 }
 
-
+/***************************** CONTACT US********************/
 
 /* Contact us container */
 .contact-us {
@@ -1077,7 +1062,6 @@ svg{
     top: 200px;
     width: 50%;
     left:-0.2%;
-   
 }   
 .contact-us #icon a svg{
     color: #FFFFFF;
